	* Fixed transport unregister process. Buddies are now removed also if user
	  doesn't support Roster Item Exchange.
	* Forward VCard avatars from XMPP to legacy network, with the caveat that
	  this only works if the VCard avatar adheres to the file type, size,
	  and dimension constraints of the legacy network (no scaling is currently
	  done).
	* Added filetransfer_bind_address and filetransfer_public_address config
	  variables to be able to set IP and port for filetransfer proxy.  The
	  public address is used if Spectrum is behind a NAT.
	* Spectrum can now open a local socket that allows (fast) statistics
	  gathering. This is already used by spectrumctl. The path to the
	  local socket is configured with the config_interface option.
	* New man pages for spectrum.cfg and spectrumctl.

	spectrumctl:
	* The script now does rigorous checking of ownership and permissions
	  on all the important files and directories.
	* New action "stats" which gathers statistics via the config_interface
	  (see above).
	* Two new command-line options for start: 
	  * --no-daemon: Do not start spectrum as a daemon
	  * --debug: Sets some environment variables, a coredump will be made
	    to $HOME in case of a segfault.
	* New command-line option for list: 
	  * --machine-readable: Output data as comma-seperated values
	* env-variable SPECTRUM_PATH can now configure how spectrumctl is
	  called. If the variable is set, it assumes that spectrum is in its
	  PATH.
	* env-variable SPECTRUM_USER can now configure the name of the
	  spectrum-user. This is still overridden by --su.

	XMPP:
	* MUC support for XMPP

	IRC:
	* IRC Nickserv password can be set via Adhoc command.
	* Fixed Private Messages.
	* Using IRC Helper (http://plugins.guifications.org/trac/wiki/irchelper) for
	  identyfing user. Used only if IRC Helper is installed.

	Munin plugin
	* Now use config_interface instead of XMPP-connection.

version 0.1 (2010-02-05):
	* initial version