@@ -61,7 +61,12 @@ def stats( options, instances ):
 			s = socket.socket( socket.AF_UNIX )
 			s.connect( config_interface )
 		except socket.error, msg:
-			o.append( config_interface + ': ' + msg.strerror )
+			if hasattr( msg, 'strerror' )
+				# python2.5 does not have msg.strerror
+				err = msg.strerror
+			else:
+				err = msg.message
+			o.append( config_interface + ': ' + err )
 			output.append( "\n".join( o ) )
 			continue
 
