@@ -56,7 +56,9 @@ version 0.2 (2010-??-??):
 	  identyfing user. Used only if IRC Helper is installed.
 
 	Munin plugin
-	* Now use config_interface instead of XMPP-connection.
+	* Now use config_interface instead of XMPP-connection. This changes
+	  the configuraton significantly, please see documentation of the
+	  plugin for details.
 
 version 0.1 (2010-02-05):
 	* initial version
